# gauss-pid

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: GAUSPIDConfig.cmake.in  GAUSPIDFit1D.cpp  GAUSPIDFit1D.hpp  GAUSPIDFit2D.cpp  GAUSPIDFit2D.hpp  GAUSPIDLinkDef.h  fit.cpp  infer.cpp  main.cpp  name_helpers.hpp
